# ComfyUI-text-preset-loader

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  __init__.py  preset_loader.py  preset_model.py  preset_previews.py  preset_storage.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
data/: presets.json
web/: browse.html  browse.js  preset_composer.js  preset_dialog.js  preset_dnd.js  preset_editor.js  preset_icons.js  preset_loader.js  preset_model.js  preset_picker.js  preset_store.js  preset_ui.css
web/core/: api.js  model.js  store.js
web/styles/: browse.css  ui.css
web/ui/: dialog.js  dnd.js  editor.js  icons.js  picker.js
