[project]
name = "ComfyUI-text-preset-loader"
description = "ComfyUI node to save, organize, compose, and reuse text presets with optional preview images."
version = "1.1.0"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "Pillow>=9.1",
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.urls]
Repository = "https://github.com/INuBq8/ComfyUI-text-preset-loader"

[tool.comfy]
PublisherId = "inubq8"
DisplayName = "ComfyUI-text-preset-loader"
Icon = ""
includes = []
